sd/sdge/guiao0/store/lock/20230214T113741.208Z/jepsen.log
2023-02-14 11:37:41,224{GMT}	INFO	[jepsen test runner] jepsen.core: Command line:
lein run test --bin guiao0/wrong-lock.py --time-limit 10 --node-count 1 -w lock --concurrency 3n
2023-02-14 11:37:41,289{GMT}	INFO	[jepsen test runner] jepsen.core: Running test:
{:args []
 :remote
 #jepsen.control.retry.Remote{:remote #jepsen.control.scp.Remote{:cmd-remote #jepsen.control.sshj.SSHJRemote{:concurrency-limit 6,
                                                                                                             :conn-spec nil,
                                                                                                             :client nil,
                                                                                                             :semaphore nil},
                                                                 :conn-spec nil},
                              :conn nil}
 :log-net-send false
 :node-count 1
 :availability nil
 :max-txn-length 4
 :concurrency 3
 :db
 #object[maelstrom.db$db$reify__16144
         "0x63c78e5e"
         "maelstrom.db$db$reify__16144@63c78e5e"]
 :max-writes-per-key 16
 :leave-db-running? false
 :name "lock"
 :logging-json? false
 :start-time
 #object[org.joda.time.DateTime "0x2a6f3ac7" "2023-02-14T11:37:41.208Z"]
 :nemesis-interval 10
 :net
 #object[maelstrom.net$jepsen_net$reify__15253
         "0x68fe866b"
         "maelstrom.net$jepsen_net$reify__15253@68fe866b"]
 :client
 #object[maelstrom.workload.lock$client$reify__19507
         "0x729feae8"
         "maelstrom.workload.lock$client$reify__19507@729feae8"]
 :barrier
 #object[java.util.concurrent.CyclicBarrier
         "0x283a5c2b"
         "java.util.concurrent.CyclicBarrier@283a5c2b"]
 :log-stderr false
 :pure-generators true
 :ssh {:dummy? true}
 :rate 5
 :checker
 #object[jepsen.checker$compose$reify__11881
         "0x7bd0e2e9"
         "jepsen.checker$compose$reify__11881@7bd0e2e9"]
 :argv
 ("test"
  "--bin"
  "guiao0/wrong-lock.py"
  "--time-limit"
  "10"
  "--node-count"
  "1"
  "-w"
  "lock"
  "--concurrency"
  "3n")
 :nemesis
 (jepsen.nemesis.ReflCompose
  {:fm {:start-partition 0,
        :stop-partition 0,
        :kill 1,
        :start 1,
        :pause 1,
        :resume 1},
   :nemeses [#unprintable "jepsen.nemesis.combined$partition_nemesis$reify__16418@6701fe26"
             #unprintable "jepsen.nemesis.combined$db_nemesis$reify__16399@6ac49084"]})
 :nodes ["n0"]
 :test-count 1
 :latency {:mean 0, :dist :constant}
 :bin "guiao0/wrong-lock.py"
 :generator
 (jepsen.generator.TimeLimit
  {:limit 10000000000,
   :cutoff nil,
   :gen (jepsen.generator.Any
         {:gens [(jepsen.generator.OnThreads
                  {:f #{:nemesis},
                   :context-filter #object[jepsen.generator.context$make_thread_filter$lazy_filter__9167
                                           "0x30587737"
                                           "jepsen.generator.context$make_thread_filter$lazy_filter__9167@30587737"],
                   :gen nil})
                 (jepsen.generator.OnThreads
                  {:f #jepsen.generator.context.AllBut{:element :nemesis},
                   :context-filter #object[jepsen.generator.context$make_thread_filter$lazy_filter__9167
                                           "0x5672920"
                                           "jepsen.generator.context$make_thread_filter$lazy_filter__9167@5672920"],
                   :gen (jepsen.generator.Stagger
                         {:dt 400000000,
                          :next-time nil,
                          :gen (jepsen.generator.EachThread
                                {:fresh-gen ({:f :lock}
                                             {:f :unlock}
                                             {:f :lock}
                                             {:f :unlock}
                                             {:f :lock}
                                             {:f :unlock}
                                             {:f :lock}
                                             {:f :unlock}
                                             ...),
                                 :context-filters #object[clojure.core$promise$reify__8591
                                                          "0x377bc8da"
                                                          {:status :pending,
                                                           :val nil}],
                                 :gens {}})})})]})})
 :log-net-recv false
 :os
 #object[maelstrom.net$jepsen_os$reify__15256
         "0x21bf94d3"
         "maelstrom.net$jepsen_os$reify__15256@21bf94d3"]
 :time-limit 10
 :workload :lock
 :consistency-models [:strict-serializable]
 :topology :grid}

2023-02-14 11:37:43,178{GMT}	INFO	[jepsen node n0] maelstrom.net: Starting Maelstrom network
2023-02-14 11:37:43,180{GMT}	INFO	[jepsen test runner] jepsen.db: Tearing down DB
2023-02-14 11:37:43,182{GMT}	INFO	[jepsen test runner] jepsen.db: Setting up DB
2023-02-14 11:37:43,184{GMT}	INFO	[jepsen node n0] maelstrom.service: Starting services: (lin-kv lin-tso lww-kv seq-kv)
2023-02-14 11:37:43,189{GMT}	INFO	[jepsen node n0] maelstrom.db: Setting up n0
2023-02-14 11:37:43,191{GMT}	INFO	[jepsen node n0] maelstrom.process: launching guiao0/wrong-lock.py []
2023-02-14 11:37:53,206{GMT}	INFO	[jepsen node n0] maelstrom.db: Tearing down n0
2023-02-14 11:37:54,214{GMT}	INFO	[jepsen node n0] maelstrom.net: Shutting down Maelstrom network
2023-02-14 11:37:54,225{GMT}	WARN	[jepsen test runner] jepsen.core: Test crashed!
clojure.lang.ExceptionInfo: Node n0 crashed with exit status 1. Before crashing, it wrote to STDOUT:



And to STDERR:

  File "/home/miguel/uni/4ano/sd/sdge/guiao0/wrong-lock.py", line 11
    match msg.body.type:
          ^
SyntaxError: invalid syntax

Full STDERR logs are available in /home/miguel/uni/4ano/sd/sdge/store/lock/20230214T113741.208Z/node-logs/n0.log
	at slingshot.support$stack_trace.invoke(support.clj:201)
	at maelstrom.process$stop_node_BANG_.invokeStatic(process.clj:239)
	at maelstrom.process$stop_node_BANG_.invoke(process.clj:217)
	at maelstrom.db$db$reify__16144.teardown_BANG_(db.clj:75)
	at jepsen.db$fn__8744$G__8725__8748.invoke(db.clj:12)
	at jepsen.db$fn__8744$G__8724__8753.invoke(db.clj:12)
	at clojure.core$partial$fn__5908.invoke(core.clj:2642)
	at jepsen.control$on_nodes$fn__8599.invoke(control.clj:314)
	at clojure.lang.AFn.applyToHelper(AFn.java:154)
	at clojure.lang.AFn.applyTo(AFn.java:144)
	at clojure.core$apply.invokeStatic(core.clj:667)
	at clojure.core$with_bindings_STAR_.invokeStatic(core.clj:1990)
	at clojure.core$with_bindings_STAR_.doInvoke(core.clj:1990)
	at clojure.lang.RestFn.applyTo(RestFn.java:142)
	at clojure.core$apply.invokeStatic(core.clj:671)
	at clojure.core$bound_fn_STAR_$fn__5818.doInvoke(core.clj:2020)
	at clojure.lang.RestFn.invoke(RestFn.java:408)
	at dom_top.core$real_pmap_helper$build_thread__211$fn__212.invoke(core.clj:163)
	at clojure.lang.AFn.applyToHelper(AFn.java:152)
	at clojure.lang.AFn.applyTo(AFn.java:144)
	at clojure.core$apply.invokeStatic(core.clj:667)
	at clojure.core$with_bindings_STAR_.invokeStatic(core.clj:1990)
	at clojure.core$with_bindings_STAR_.doInvoke(core.clj:1990)
	at clojure.lang.RestFn.invoke(RestFn.java:425)
	at clojure.lang.AFn.applyToHelper(AFn.java:156)
	at clojure.lang.RestFn.applyTo(RestFn.java:132)
	at clojure.core$apply.invokeStatic(core.clj:671)
	at clojure.core$bound_fn_STAR_$fn__5818.doInvoke(core.clj:2020)
	at clojure.lang.RestFn.invoke(RestFn.java:397)
	at clojure.lang.AFn.run(AFn.java:22)
	at java.base/java.lang.Thread.run(Thread.java:829)
